Change text in homepage and add stylings

--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -1,1 +1,4 @@
-<div class="text-danger">baaaall</div>
+<div class="text-center homepage">
+    <h1 class= "text-white font">Welcome to Gracia Book Save</h1>
+      <p class="welcome text-white font-tail">So many books, so little time.</p>
+</div>
