--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,39 @@
  *= require_self
  */
  @import 'bootstrap/scss/bootstrap';
+
+ 
+ .navbar{
+    background-color: #2974ae;
+}
+.wrapper {
+   display: flex;
+   position: relative;
+}
+
+.wrapper .sidebar{
+  position: fixed;
+  width: 200px;
+  height: 100%;
+  background-color: #2d7fbb;
+  padding: 30px 0;
+}
+
+.wrapper .sidebar ul li {
+   padding: 15px;
+
+}
+
+.font-tail{
+   font-family: Yellowtail;
+   font-size: 30px;
+ }
+
+.placeholder {
+   margin-left: auto;
+   margin-right: auto; 
+}
+
+body {
+   background-color: #f1f1f1;
+}
