--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the books controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.amount-border{
+    border: 2px solid red;
+    width: 6%;
+    margin-left: auto;
+    margin-right: auto; 
+}
+
+.external-display {
+    margin-left: auto;
+    margin-right: auto; 
+}
