--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the groups controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.main-icon {
+    width: 75px;
+    height: 75px;
+    border-radius: 100%;
+    margin-left: auto;
+    margin-right: auto; 
+}
+
+.icon {
+    object-fit: cover;
+    width: 200%;
+    
+}
