--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,31 @@
   </head>
 
   <body>
-    <%= yield %>
+         <% flash.each do |type, message| %>
+           <%= content_tag :p, class: "animated fadeInDown m-0 text-center text-#{type} alert alert-#{type}" do -%>
+            <%= message %>
+             <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            <% end -%>
+       <% end %>
+   <nav class="navbar navbar-expand-lg navbar-light custom-nav">
+        <%= link_to "GB|S", root_path, class: "navbar-brand text-white"%>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+          <div class='d-flex justify-content-stretch align-items-center'>
+               <%= links_display %>
+           
+          </div>
+        </div>
+  </nav>
+      
+
+   
+
+     <div class='content'>
+        <%= yield %>
+    </div>
   </body>
 </html>
