--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,4 @@
 <div class="main-icon">
-      <%= image_tag(url_for(@book&.groups&.first&.icon), class: "icon w-100") %>
+      <%= image_tag(url_for(@book&.groups&.first&.icon)) %>
 </div>
 
