--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
             <%= message %>
              <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
             <% end -%>
-       <% end %>
+         <% end %>
    <nav class="navbar navbar-expand-lg navbar-light custom-nav">
         <%= link_to "GB|S", root_path, class: "navbar-brand text-white"%>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,10 +28,10 @@
            
           </div>
         </div>
-  </nav>
+   </nav>
       
 
-     <% if current_user %>
+      <% if logged_in? %>
          <div class="wrapper">
           <div class="sidebar">
            <ul class="list-unstyled">
@@ -41,7 +41,7 @@
         </ul>
         </div>
         </div>
-    <% end %>
+     <% end %>
 
      <div class='content'>
         <%= yield %>
