--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,9 +1,9 @@
 <div class="main-icon text-center">
     
     <%= group_array(@groups) %>   
-    <tr>
+    
    
-    <td> <%= link_to('New Group', new_group_path, class:"btn btn-success button-styling ")%> </td>
-    </tr>
+     <%= link_to('New Group', new_group_path, class:"btn btn-success button-styling mt-5 ")%> 
+    
 </div>
 
