--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
    </nav>
       
 
-      <% if logged_in? %>
+      <% if current_user %>
          <div class="wrapper">
           <div class="sidebar">
            <ul class="list-unstyled">
