Updated readme file

--- a/app/views/books/external.html.erb
+++ b/app/views/books/external.html.erb
@@ -1,5 +1,5 @@
-<div class="text-center my-5">
-    <h2 class="text-dark mb-5"><%= current_user.username %>'s External Book Charges</h2>
+<div class="text-center pt-5 ">
+    <h2 class="text-dark mb-5 mt-5"><%= current_user.username %>'s External Book Charges</h2>
     <% if !@books.empty? %>
     <div class="text-center ">
        
