--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,19 +17,26 @@
 
  
  .navbar{
-    background-color: #2974ae;
+   background-color: #2974ae;
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
 }
+
 .wrapper {
    display: flex;
    position: relative;
 }
 
 .wrapper .sidebar{
-  position: fixed;
-  width: 200px;
-  height: 100%;
-  background-color: #2d7fbb;
-  padding: 30px 0;
+   position: fixed;
+   width: 200px;
+   height: calc(100vh - 56px);
+   background-color: #2d7fbb;
+   padding: 30px 0;
+   top: 56px;
+   left: 0;
 }
 
 .wrapper .sidebar ul li {
