--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -2,16 +2,19 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .main-icon {
-    width: 75px;
+    width: 100px;
     height: 75px;
-    border-radius: 100%;
     margin-left: auto;
     margin-right: auto; 
 }
 
 .icon {
     object-fit: cover;
-    width: 109%;
-   
-    
+    width: 200%;  
+    padding: 10px;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15); 
+}
+
+.edit-width{
+   width: 100%;
 }
