--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,4 +1,4 @@
-<div class="text-center">
+<div class="text-center pt-5">
     <h1 class=" mt-5 pb-4 pt-0">Create Book Expense</h1>
     
         <%= form_for(:book, html: {class: "form-horizontal", role: "form"}, url: books_path) do |f| %>
@@ -14,7 +14,7 @@
             </div>
             <div class="form-group">
             <%= f.label :group, "Choose Group", class:"font-weight-bold"  %><br>
-           <%= f.collection_radio_buttons :group_ids, @groups, :creator_id, :name %>
+           <%= f.collection_radio_buttons :group_ids, @groups, :creator_id, :name, class: "p-4" %>
         </div>
             <%= f.submit "Create!!! No Time", class: 'btn btn-success' %>
 
