Resolve errors in code

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,10 +18,10 @@
  
  .navbar{
    background-color: #2974ae;
-   // position: fixed;
-   // top: 0;
-   // left: 0;
-   // width: 100%;
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
 }
 
 .wrapper {
