--- a/app/views/books/external.html.erb
+++ b/app/views/books/external.html.erb
@@ -17,7 +17,7 @@
     <% end%>
     <% else %>
         <p class=" my-5 text-center">No external expense yet.</p>
-        <p class= "text-center">I think you will love to creare one</p>
+        <p class= "text-center">I think you will love to create one</p>
     <% end %>
-      <%= link_to('Create External Expenses', external_books_path, class:"btn btn-success  mt-5 text-center external-styling")%> 
+      <%= link_to('Create External Expenses', new_book_path, class:"btn btn-success  mt-5 text-center external-styling")%> 
 </div>
