--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -5,14 +5,11 @@
 .amount-border{
     border: 2px solid red;
     width: 6%;
-    margin-left: auto;
-    margin-right: auto; 
+    margin: 0 auto;
+    
 }
 
-.external-display {
-    margin-left: auto;
-    margin-right: auto; 
-}
+
 .external-styling{
     width: 30%;
 }
