--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="text-center mt-5 pt-5">
+<div class="text-center mt-5">
 <%= form_for (@group) do |f| %>
     <div >
         <%= f.label :name, class:"font-weight-bold pb-3"  %>
