--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -14,7 +14,7 @@
             </div>
             <div class="form-group">
             <%= f.label :group, "Choose Group", class:"font-weight-bold"  %><br>
-           <%= f.collection_radio_buttons :group_ids, @groups, :creator_id, :name, class: "p-4" %>
+           <%= f.collection_check_boxes :group_ids, @groups, :id, :name, class: "p-4"%>
         </div>
             <%= f.submit "Create!!! No Time", class: 'btn btn-success' %>
 
