--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -3,8 +3,8 @@
     
        
      
-   
+   <div class="group-style external-display ">
      <%= link_to('New Group', new_group_path, class:"btn btn-success button-styling mt-5 ")%> 
-    
+   </div> 
 </div>
 
