--- a/app/assets/stylesheets/homepages.scss.erb
+++ b/app/assets/stylesheets/homepages.scss.erb
@@ -2,10 +2,10 @@
     background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(<%= asset_path 'bookstore.jpg' %>),  no-repeat;
      background-size: cover;
      background-position-y: center;
-     height: 95vh;
+     height: calc(100vh - 56px);
      position: relative;
-
-    
+     margin-left: -217px;
+     width: 100%;
   }
 
 .welcome {
