--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
-  <div class="text-center pt-5">
+  <div class="text-center pt-5 page-forms">
     <h1 class="pt-0 pb-4 mt-5">Sign Up</h1>
     
        
-            <%= form_for(:user, :html => {class: "form-horizontal ", role: "form"}, url: users_path) do |f| %>
+            <%= form_for(:user, html: {class: "form-horizontal ", role: "form"}, url: users_path) do |f| %>
 
            <div class="form-group">
                 <%= f.label :username, class:"font-weight-bold" %>
