--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,60 +13,101 @@
  *= require_tree .
  *= require_self
  */
- @import 'bootstrap/scss/bootstrap';
+@import 'bootstrap/scss/bootstrap';
 
- 
- .navbar{
-   background-color: #2974ae;
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 100%;
+.navbar {
+  background-color: #2974ae;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 56px;
+  z-index: 9;
 }
 
-.wrapper {
-   display: flex;
-   position: relative;
+// {
+//    display: flex;
+//    position: relative;
+// }
+
+.main {
+  position: absolute;
+  height: calc(100vh - 56px);
+  // padding: 15px;
+  top: 56px;
+  left: 0;
 }
 
-.wrapper .sidebar{
-   position: fixed;
-   width: 200px;
-   height: calc(100vh - 56px);
-   background-color: #2d7fbb;
-   padding: 30px 0;
-   top: 56px;
-   left: 0;
+.sidebar {
+  position: fixed;
+  width: 200px;
+  height: calc(100vh - 56px);
+  background-color: #2d7fbb;
+  padding: 30px 0;
+  top: 56px;
+  left: 0;
 }
 
-.wrapper .sidebar ul li {
-   padding: 15px;
-
+.sidebar ul li {
+  padding: 15px;
 }
 
-.font-tail{
-   font-family: Yellowtail;
-   font-size: 30px;
- }
+.content {
+  margin-left: 217px;
+  width: calc(100vw - 217px);
+  height: 100%;
+  overflow-x: hidden;
+}
+
+.font-tail {
+  font-family: Yellowtail, sans-serif;
+  font-size: 30px;
+}
 
 .placeholder {
-   margin: 0 auto;
-    
+  margin: 0 auto;
 }
 
 body {
-   background-color: #f1f1f1;
+  background-color: #f1f1f1;
 }
 
 .button-styling {
-   width: 144%;
+  width: 144%;
 }
 
 .edit-styling {
-   width: 50%;
+  width: 50%;
 }
 
 .external-display {
-   margin: 0 auto;
+  margin: 0 auto;
+}
 
+.custom-card {
+  width: 450px;
+  margin: 10px;
+}
+
+.custom-card-img {
+  width: 120px;
+  object-fit: cover;
+}
+
+.custom-btn {
+  background-color: rgb(31, 136, 31);
+
+  a {
+    color: white;
+  }
+}
+
+.page-forms {
+  margin-left: -11rem;
+}
+
+.flash-messages {
+  position: absolute !important;
+  z-index: 19;
+  width: 100%;
 }
