--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -2,21 +2,31 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 .main-icon {
-    width: 100%;
-    height: 75px;
-    margin: 5% auto 0;
-   
+  width: 100%;
+  height: 75px;
+  margin: 5% auto 0;
 }
 
 .icon {
-    object-fit: cover;
-    width: 200%;  
+  object-fit: cover;
+  width: 200%;
 }
 
 .group-styling {
-   width: 24%;
+  width: 24%;
 }
 
 .group-style {
-    width: 8%;
- }
+  width: 8%;
+}
+
+.group-img-container {
+  height: 280px;
+  background: transparent;
+}
+
+.group-img {
+  width: 250px;
+  height: 100%;
+  object-fit: contain;
+}
