--- a/app/views/books/external.html.erb
+++ b/app/views/books/external.html.erb
@@ -1,27 +1,15 @@
-<div class="text-center pt-5 ">
-    <h2 class="text-dark mb-5 mt-5"><%= current_user.username %>'s External Book Charges</h2>
-    <% if !@books.empty? %>
-       <div class="text-center ">
-       
-        <p class='mb-0  p-4 shadow  w-50 external-display font-weight-bold'>Total Amount: <span class='float-right'> <%= number_to_currency(current_user.total_ungrouped_books) || 0%> </span></p>
-       </div>
-    
-      <% @books.each do |ex| %>
-        <div class="my-5 shadow w-50 external-display">
-            <h4 class="ml-3 "><%= link_to  ex.title, book_path(ex), class: "text-secondary" %></h4>
-            <div>
-                <p class="lead"><%= ex.amount %>$</p>
-                <small class="text-muted"><%= ex.created_at %></small>
-            </div>
-            
-        </div>
-      
-    <% end%>
-     
-    <% else %>
-        <p class=" my-5 text-center">No external expense yet.</p>
-        <p class= "text-center">I think you will love to create one</p>
-    <% end %>
-      <%= link_to('Create External Expenses', new_book_path, class:"btn btn-success  mt-5 text-center external-styling")%> 
-     
+<div class="d-flex w-100 justify-content-between p-3 total-amount">
+    <h4 class="p-0">Total Amount</h4>
+    <p class=" "><%= number_to_currency(ungrouped_calculate(current_user.books) || 0 ) %></p>
+</div>
+
+  <div class='py-3 mt-3 mr-5'>
+  <div class='mx-4'>
+    <div class="row flex-column flex-md-row flex-wrap">
+      <%= render_book_collection(@books, 'book') %>
+    </div>
+      <div class="custom-btn p-4 mt-5">
+      <%= link_to 'Add New', new_book_path, class: 'btn btn-lg custom-btn border border-white w-100' %>
+    </div>
+  </div>
 </div>
