--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,12 +1,15 @@
-<div class="text-center pt-5">
+<div class="d-flex w-100 justify-content-between p-3  ml-0">
+    <h4 >Total Amount</h4>
+    <p class=""><%= number_to_currency(grouped_calculate(current_user.books) || 0 ) %></p>
+</div>
 
-    <div>
-        <h2 class="text-dark pb-4 mt-5"><%= current_user.username %>'s book save</h2>
-        <h4 >Total Amount</h4>
-        <p class=" total-amount btn btn-md btn-primary "><%= number_to_currency(current_user.total_book_price || 0 ) %></p>
-    </div>    
-    <div class="text-center">
-    
-        <%= link_to  "Add new books", new_book_path, class: "btn btn-success" %>
+  <div class='py-3 mt-3 mr-5'>
+  <div class='mx-4'>
+    <div class="row flex-column flex-md-row flex-wrap">
+      <%= render_book_collection(@books, 'book') %>
     </div>
+      <div class="custom-btn p-4 mt-5">
+      <%= link_to 'Add New', new_book_path, class: 'btn btn-lg custom-btn border border-white w-100' %>
+    </div>
+  </div>
 </div>
