--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,47 +4,54 @@
     <title>BookTransaction</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-         <% flash.each do |type, message| %>
-           <%= content_tag :p, class: "animated fadeInDown m-0 text-center text-#{type} alert alert-#{type}" do -%>
-            <%= message %>
-             <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-            <% end -%>
-         <% end %>
-   <nav class="navbar navbar-expand-lg navbar-light custom-nav">
-        <%= link_to "GB|S", root_path, class: "navbar-brand text-white"%>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+   <% flash.each do |key, value| %>
+    <%= content_tag(:div, class: "alert alert-#{key} flash-messages") do %>
+      <%= value %>
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <% end %>
+  <% end %>
+          <nav class="navbar navbar-expand-lg navbar-light custom-nav">
+           <% unless current_user %>
+             <%= link_to "GB|S", root_path, class: "navbar-brand text-white"%>
+               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+              </button>
+            <% end %>
 
-        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-          <div class='d-flex justify-content-stretch align-items-center'>
-               <%= links_display %>
-           
-          </div>
-        </div>
-   </nav>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                 <div class='d-flex justify-content-stretch align-items-center'>
+                    <%= links_display %>
+                  </div>
+             </div>
+          </nav>
+
+       
       
+      <div class="d-flex main">
+        <% if current_user %>
+          <%# <div class="wrapper"> %>
+            <div class="sidebar">
+            <ul class="list-unstyled">
+            <li ><%= link_to "My Expenses", books_path, class: "text-white far fa-gem"%></li>
+            <li><%= link_to "My External expenses", external_books_path, class: "text-white "%></li>
+            <li><%= link_to "My Groups", groups_path, class: "text-white"%></li>
+          </ul>
+          </div>
+          <%# </div> %>
+      <% end %>
 
-      <% if current_user %>
-         <div class="wrapper">
-          <div class="sidebar">
-           <ul class="list-unstyled">
-          <li ><%= link_to "My Expenses", books_path, class: "text-white far fa-gem"%></li>
-          <li><%= link_to "My External expenses", external_books_path, class: "text-white "%></li>
-          <li><%= link_to "My Groups", groups_path, class: "text-white"%></li>
-        </ul>
-        </div>
-        </div>
-     <% end %>
-
-     <div class='content'>
-        <%= yield %>
+      <div class='content'>
+          <%= yield %>
+      </div>
+      
     </div>
   </body>
 </html>
